LPS-85742 The message 'All fields marked with * are required' is not aligned correctly in forms

--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
@@ -20,6 +20,7 @@
 
 	.required-warning {
 		margin-bottom: 25px;
+		padding-left: 32px;
 
 		.icon-asterisk {
 			margin-left: 4px;
